--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hyas/core",
   "description": "Hyas core",
-  "version": "1.5.0",
+  "version": "1.5.5",
   "browserslist": [
     "defaults"
   ],
@@ -41,7 +41,7 @@
     "auto-changelog": "^2.3.0",
     "autoprefixer": "^10.2",
     "bootstrap": "^5.0",
-    "eslint": "^7.29",
+    "eslint": "^7.30",
     "exec-bin": "^1.0.0",
     "hugo-installer": "^3.0.1",
     "instant.page": "^5.1",
@@ -56,5 +56,6 @@
   },
   "otherDependencies": {
     "hugo": "0.84.0"
-  }
+  },
+  "dependencies": {}
 }
